@@ -1,5 +1,7 @@
 2009-05-02  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/ipython_view.py: Made up/down history not loop (bug #578608).
+
 	* README: 
 	* accerciser.spec.in: 
 	* debian/control: 
